GNOME Bugzilla – Bug 625228
Removing a keybinding does not unbind it.
Last modified: 2011-11-16 18:31:58 UTC
Description: I had a keybinding defined which I deleted because I did not need it anymore using the "Remove" button. However, the key was still bound. How to reproduce: 1. Open the Keybindings dialog 2. Create a new keybinding. Use a name and a command of your choice,. 3. Assign any key to it. 4. Remove the command from the list without changing the binding. 5. You will notice that the key is intercepted as if it was still bound to a global hotkey. Expected results: Key should not act as a global hotkey anymore after it was removed from the list.
This is a problem in gnome-settings-daemon, though I bet it's due to GConf suckage.
*** Bug 630411 has been marked as a duplicate of this bug. ***
the issue is still there in GNOME 3.2
commit 3bf59d722474d480d49d4172664b2a33a9de2bb6 Author: Bastien Nocera <hadess@hadess.net> Date: Wed Nov 2 19:40:41 2011 +0000 media-keys: Implement GConf keyboard shortcuts Including ungrabbing them. https://bugzilla.gnome.org/show_bug.cgi?id=625228 Note that some of the keybindings seem to fail at unbinding (even though they get ungrabbed correctly), no idea why.
*** Bug 663925 has been marked as a duplicate of this bug. ***
*** Bug 619680 has been marked as a duplicate of this bug. ***