media-keys: Implement GConf keyboard shortcuts

Including ungrabbing them.

https://bugzilla.gnome.org/show_bug.cgi?id=625228

Note that some of the keybindings seem to fail at unbinding (even though
they get ungrabbed correctly), no idea why.